# idc-monai

./: README.md  pyproject.toml  requirements.txt  setup.py
dev/: check_dicom_metadata.py  compare_ct_seg_loading.py  compare_dcmqi_itkwasm.py  debug_orientation.py  derive_itkreader_transform.py  derive_itkreader_v2.py  derive_itkreader_v3.py  final_transform_test.py  final_transform_v2.py  final_transform_v3.py  final_transform_v4.py  test_transform.py
docs/: dicom_seg_loading.md  loaddicomsegd_fix_plan.md
monai_contribution/: idc_dataset.ipynb
src/idc_monai/: __init__.py  dataset.py  transforms.py  utils.py
tutorials/: 01_getting_started.ipynb  02_ct_segmentation.ipynb  03_working_with_annotations.ipynb
