[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idc-monai"
version = "0.1.0"
description = "Tools for using NCI Imaging Data Commons with MONAI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Imaging Data Commons", email = "support@canceridc.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "monai>=1.0.0",
    "idc-index>=0.8.0",
    "torch>=1.9.0",
    "pydicom>=2.3.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "itkwasm-dicom>=7.6.4",
    "itk>=5.4.5",
    "nibabel>=5.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]
tutorials = [
    "matplotlib>=3.4.0",
    "jupyterlab",
    "SimpleITK>=2.1.0",
    "itkwasm-dicom>=7.6.0",  # For DICOM-SEG loading
]

[project.urls]
Homepage = "https://github.com/ImagingDataCommons/idc-monai"
Documentation = "https://github.com/ImagingDataCommons/idc-monai"
Repository = "https://github.com/ImagingDataCommons/idc-monai"
"Bug Tracker" = "https://github.com/ImagingDataCommons/idc-monai/issues"
"IDC Portal" = "https://portal.imaging.datacommons.cancer.gov/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88
